--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]-小小厨房网</title>
+    <title>@ViewData["Title"]-小小厨房</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/layout.css" />
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">首页</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">菜谱</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cookbook" asp-action="Cookbook">菜谱</a>
                         </li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Admin - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - 小小厨房 - <a asp-area="" asp-controller="Home" asp-action="Index">Cookbook</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
