--- a/Admin/Views/Home/Login.cshtml
+++ b/Admin/Views/Home/Login.cshtml
@@ -1,5 +1,38 @@
 ﻿@{
-        ViewData["Title"] = "登陆";
+    ViewData["Title"] = "登陆";
 }
 
-<div>这是个登陆还没做</div>
+<div class="modal fade" id="Login" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">账号：</label>
+                        <input type="text" class="form-control" id="account">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-text" class="col-form-label">密码：</label>
+                        <input type="text" class="form-control" id="pwd">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">登陆</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript">
+    $(function () {
+        $("#Login").modal("show");
+    })
+</script>
