--- a/Admin/Views/Shared/Error.cshtml
+++ b/Admin/Views/Shared/Error.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Error";
 }
 
+<link rel="stylesheet" href="~/css/error.css" />
+
 <div>
     <svg width="380px" height="500px" viewBox="0 0 837 1045" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
