--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/layout.css" />
-    <link rel="stylesheet" href="~/css/error.css" />
 </head>
 <body>
     <header>
@@ -29,7 +28,7 @@
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
-                        <a class="btn btn-outline-red my-2 my-sm-0 text-white" asp-area="" asp-controller="Home" asp-action="Login">登陆</a>
+                        <a class="btn btn-outline-write my-2 my-sm-0 text-white" asp-area="" asp-controller="Home" asp-action="Login" >登陆</a>
                     </form>
                 </div>
             </div>
@@ -43,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - 小小厨房 - <a asp-area="" asp-controller="Home" asp-action="Index">Cookbook</a>
+            &copy; 2020 - 小小厨房
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
