--- a/Admin/wwwroot/css/layout.css
+++ b/Admin/wwwroot/css/layout.css
@@ -16,8 +16,7 @@
     border-color: #ffffff;
 }
 .slideimg {
-    width:100%;
-    height:75%
+    height:800px;
 }
 .font-dark {
     color:#000000
